--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 * {
     font-family: sans-serif;
 }
+
+.sec-center {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
