--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 * {
     font-family: sans-serif;
+    text-decoration: none;
+    text-align: center;
+}
+
+a {
+    display: block;
 }
 
 .sec-center {
