--- a/Age Calculator/style.css
+++ b/Age Calculator/style.css
@@ -2,6 +2,30 @@
     font-family: sans-serif;
 }
 
+body {
+    background-color: #f6e9e9;
+}
+
+h1 {
+    font-size: 36px;
+}
+
+#sec_1 {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+#div_1 {
+    width: 25%;
+    margin-inline: auto;
+    text-align: center;
+    box-shadow: 0px 0px 20px rgb(205, 201, 201);
+    padding: 25px;
+    border-radius: 25px;
+    background: #fff;
+}
+
 #input1,
 #UserSubmit {
     font-size: 18px;
@@ -9,4 +33,29 @@
 
 label {
     font-size: 20px;
+}
+
+#input1 {
+    margin-bottom: 10px;
+    padding: 5px;
+    border-radius: 10px;
+    border: 2px solid gray;
+    outline: gray;
+    cursor: text;
+}
+
+#UserSubmit {
+    padding: 8px 18px;
+    border-radius: 10px;
+    color: #fff;
+    border: none;
+    box-shadow: 0px 0px 10px rgb(233, 231, 231);
+    background: rgb(35, 35, 245);
+    transition: all 300ms ease-in-out;
+    cursor: pointer;
+}
+
+#UserSubmit:hover {
+    background: rgb(0, 0, 228);
+
 }
